--- a/index.html
+++ b/index.html
@@ -85,19 +85,11 @@ onload="startTime()">
   </ul>
 </nav>
 
-<body> 
 
-
-
-</div>
-
-  
-
-</body>
 </html>
 		<center>
 <a href="new 1.html" target="_self">FORM</a><br><br><br><br><br><br><br>
-<a style="color:mistyrose;" href="TEST.html" target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
+<a style="color:white;" href="TEST.html" target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
 <a href="article.html" target="_self">SOME F.A.Q</a><br><br><br><br><br><br><br>
 <a href="media.html" target="_self">PLAY MEDIA</a><br><br><br><br><br><br><br>
 <a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a>
