--- a/article.html
+++ b/article.html
@@ -45,18 +45,18 @@
 <body>
 
 <p id="first_par">
-What is COVID-19? <br>
+<h2><strong>What is COVID-19?</strong></h2>
 Coronavirus disease (COVID-19) is an infectious disease caused by a new virus.
 The disease causes respiratory illness (like the flu) with symptoms such as a cough, fever, and in more severe cases, difficulty breathing. You can protect yourself by washing your hands frequently, avoiding touching your face, and avoiding close contact (1 meter or 3 feet) with people who are unwell.
 ________________________________________<br>
 
-HOW IT SPREADS
+<h2><strong>HOW IT SPREADS<strong></h2>
 Coronavirus disease spreads primarily through contact with an infected person when they cough or sneeze. It also spreads when a person touches a surface or objects that has the virus on it, then touches their eyes, nose, or mouth.
 </p>
 
 
 <p id="second_par">
-SYMPTOMS<br>
+<h2><strong>SYMPTOMS<strong></h2>
 People may be sick with the virus for 1 to 14 days before developing symptoms. The most common symptoms of coronavirus disease (COVID-19) are fever, tiredness, and dry cough. Most people (about 80%) recover from the disease without needing special treatment.
 More rarely, the disease can be serious and even fatal. Older people, and people with other medical conditions (such as asthma, diabetes, or heart disease), may be more vulnerable to becoming severely ill.
 ________________________________________<br>
@@ -68,7 +68,7 @@ difficulty breathing (severe cases)<br>
 </p>
 
 <p id ="third_par">
-TREATMENT?<br>
+<h2><strong>TREATMENT?<strong></h2>
 There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to help them breathe.
 SELF CARE!
 If you have mild symptoms, stay at home until you’ve recovered. You can relieve your symptoms if you:
@@ -97,6 +97,10 @@ SICK? Call ahead
 </p>
 
 
-<br><br><a href="index.html" >&lt;&lt; back</a>
+
+<br><br>
+<div>
+<a href="index.html" >&lt;&lt; back</a>
+</div>
 </body>
 </html>
