--- a/TEST.html
+++ b/TEST.html
@@ -472,11 +472,8 @@
 			
     </script>
 	<center>
+<a href="index.html" > RETAKE TEST</a>
 
-<form>
-  <input   type="button" style="background-color:lightblue"
-		   onclick="location.href='TEST.HTML';" value="TAKE ANOTHER TEST"/>
-		   </form>
 
 	</center>
 </body>
