--- a/TEST.html
+++ b/TEST.html
@@ -472,8 +472,7 @@
 			
     </script>
 	<center>
-<a href="TEST.html" > RETAKE TEST</a>
-
+<a href="TEST.html" > TAKE ANOTHER TEST</a>
 
 	</center>
 </body>
