--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ header, footer {
     clear: left;
     text-align: center;
 }
-a:hover,a:active{color:#4CAF50}
+a:hover,a:active{color:red}
 nav {
     float: left;
     max-width: 160px;
