--- a/TEST.html
+++ b/TEST.html
@@ -216,12 +216,12 @@
       </center>
   </div>
                  <br><br><br><br><br><br>
-                  <center><img src="assets/gallery/result.png" class=" img-fluid" /></center><hr style="border-top:4px solid #000000; margin-bottom:0px;" />
+                  <center><img src="assets/gallery/result.png" class=" img-fluid" /><<hr style="border-top:4px solid #000000; margin-bottom:0px;" />
                   <h5 class="mb-1  text-left">RESULT: <span style="color:white;"id="clicks"class="invisible"></span> </h5>
 				  
                   <h6 class="mb-1  text-left">THE CHANCE OF YOU <br />HAVING COVID-19 is</h6>
                   <h2 id="holder"></h2>
-                	<p id="resulthold" class="  font-weight-bold" style="color:#000000;"></p>
+                	<p id="resulthold" class="  font-weight-bold" style="color:#000000;"></p></center>
                   
               </div>
           </div>
@@ -305,7 +305,7 @@
                     case 2:
                         document.getElementById("holder").innerHTML = 'LOW.';
                         document.getElementById("holder").style.color = '#90ee90';
-                        document.getElementById("resulthold").innerHTML = 'You may be stressed,get some rest.';
+                        document.getElementById("resulthold").innerHTML =  'You may be stressed, try and get some rest.';
                         // code block
                         break;
                     case 3:
@@ -313,7 +313,7 @@
                     case 5:
                         document.getElementById("holder").innerHTML = 'MEDIUM.';
                         document.getElementById("holder").style.color = '#ffbf00';
-                        document.getElementById("resulthold").innerHTML = 'Drink water regularly and observe personal good hygiene.<br />Pay attention to your health and redo test after two days.';
+                        document.getElementById("resulthold").innerHTML ='Drink water regularly and observe good personal hygiene.<br />Pay attention to your health and redo test after two days.';
                         // code block
                         break;
                     case 6:
@@ -325,7 +325,7 @@
                     case 12:
                         document.getElementById("holder").innerHTML = 'HIGH.';
                         document.getElementById("holder").style.color = '#ff5500';
-                        document.getElementById("resulthold").innerHTML = 'Please see a doctor immediately.Do not panic,<br />isolate yourself from friends and family.';
+                        document.getElementById("resulthold").innerHTML = 'Please isolate yourself and see a doctor immediately.Do not panic,<br />';
 
                         // code block
                         break;
@@ -342,7 +342,7 @@
                     case 23:
                         document.getElementById("holder").innerHTML = 'SEVERE';
                         document.getElementById("holder").style.color = '#FF0000';
-                        document.getElementById("resulthold").innerHTML = 'Do not panic,isolate yourself from friends and family.<br />Call 0800-9700-0010,SMS: 08099555577 or<br /> WHATSAPP: 07087110839';
+                        document.getElementById("resulthold").innerHTML = 'Do not panic,isolate yourself from people immidiately<br>keep track of all those you came in contact with.<br /> Call 0800-9700-0010 or visit covid19.ncdc.gov.ng'
 
                         // code block
                         break;
@@ -360,7 +360,7 @@
                     case 2:
                         document.getElementById("holder").innerHTML = 'LOW.';
                         document.getElementById("holder").style.color = '#90ee90';
-                        document.getElementById("resulthold").innerHTML = 'You may be stressed,get some rest.';
+                        document.getElementById("resulthold").innerHTML =  'You may be stressed, try and get some rest.';
                         // code block
                         break;
                     case 3:
@@ -368,7 +368,7 @@
                     case 5:
                         document.getElementById("holder").innerHTML = 'MEDIUM.';
                         document.getElementById("holder").style.color = '#ffbf00';
-                        document.getElementById("resulthold").innerHTML = 'Drink water regularly and observe personal good hygiene.<br />Pay attention to your health and redo test after two days.';
+                        document.getElementById("resulthold").innerHTML ='Drink water regularly and observe good personal hygiene.<br />Pay attention to your health and redo test after two days.';
                         // code block
                         break;
                     case 6:
@@ -380,7 +380,7 @@
                     case 12:
                         document.getElementById("holder").innerHTML = 'HIGH.';
                         document.getElementById("holder").style.color = '#ff5500';
-                        document.getElementById("resulthold").innerHTML = 'Please see a doctor immediately.Do not panic,<br />isolate yourself from friends and family.';
+                        document.getElementById("resulthold").innerHTML = 'Please isolate yourself and see a doctor immediately.Do not panic,<br />';
 
                         // code block
                         break;
@@ -397,7 +397,7 @@
                     case 23:
                         document.getElementById("holder").innerHTML = 'SEVERE';
                         document.getElementById("holder").style.color = '#FF0000';
-                        document.getElementById("resulthold").innerHTML = 'Do not panic,isolate yourself from friends and family.<br />Call 0800-9700-0010,SMS: 08099555577 or<br /> WHATSAPP: 07087110839';
+                        document.getElementById("resulthold").innerHTML ='Do not panic,isolate yourself from people immidiately<br>keep track of all those you came in contact with.<br /> Call 0800-9700-0010 or visit covid19.ncdc.gov.ng'
 
                         // code block
                         break;
@@ -416,7 +416,7 @@
                     case 2:
                         document.getElementById("holder").innerHTML = 'LOW.';
                         document.getElementById("holder").style.color = '#90ee90';
-                        document.getElementById("resulthold").innerHTML = 'You may be stressed,get some rest.';
+                        document.getElementById("resulthold").innerHTML =  'You may be stressed, try and get some rest.';
                         // code block
                         break;
                     case 3:
@@ -424,7 +424,7 @@
                     case 5:
                         document.getElementById("holder").innerHTML = 'MEDIUM.';
                         document.getElementById("holder").style.color = '#ffbf00';
-                        document.getElementById("resulthold").innerHTML = 'Drink water regularly and observe personal good hygiene.<br />Pay attention to your health and redo test after two days.';
+                        document.getElementById("resulthold").innerHTML = 'Drink water regularly and observe good personal hygiene.<br />Pay attention to your health and redo test after two days.';
                         // code block
                         break;
                     case 6:
@@ -436,7 +436,7 @@
                     case 12:
                         document.getElementById("holder").innerHTML = 'HIGH.';
                         document.getElementById("holder").style.color = '#ff5500';
-                        document.getElementById("resulthold").innerHTML = 'Please see a doctor immediately.Do not panic,<br />isolate yourself from friends and family.';
+                        document.getElementById("resulthold").innerHTML = 'Please isolate yourself and see a doctor immediately.Do not panic,<br />';
 
                         // code block
                         break;
@@ -453,7 +453,7 @@
                     case 23:
                         document.getElementById("holder").innerHTML = 'SEVERE';
                         document.getElementById("holder").style.color = '#FF0000';
-                        document.getElementById("resulthold").innerHTML = 'Do not panic,isolate yourself from friends and family.<br />Call 0800-9700-0010,SMS: 08099555577 or<br /> WHATSAPP: 07087110839';
+                        document.getElementById("resulthold").innerHTML = 'Do not panic,isolate yourself from people immidiately<br>keep track of all those you came in contact with.<br /> Call 0800-9700-0010 or visit covid19.ncdc.gov.ng'
 
                         // code block
                         break;
