--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ center a{
 padding: 45px;
 border: 9px solid rgb(0,200,0);
 background-color: rgb(0,200,0);
-color: Yellow;
+color: navy;
 text-transform: uppercase;
 text-decoration: none;
 }
@@ -69,7 +69,7 @@ onload="startTime()">
 
 <div id="txt"></div>
 
- <H1> <marquee  direction="left">COVID-19 is real > The irresponsibility of a <span style="font-size:larger;">few will lead to the</span> <span style="color:red" "font-size:larger;"> death of many...<span style="color:green;">STAY SAFE!!! </marquee> </H1>	
+ <H1> <marquee  direction="left">COVID-19 is real !!!<br> The irresponsibility of a <span style="font-size:larger;">few<br> will lead to the</span> <span style="color:red" "font-size:larger;"> death of many...<span style="color:green;">STAY SAFE!!! </marquee> </H1>	
 
 
 
@@ -89,7 +89,7 @@ onload="startTime()">
 </html>
 		<center>
 <a href="new 1.html" target="_self">FORM</a><br><br><br><br><br><br><br>
-<a style="color:white;" href="TEST.html" target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
+<a href="TEST.html" style="color:white;target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
 <a href="article.html" target="_self">SOME F.A.Q</a><br><br><br><br><br><br><br>
 <a href="media.html" target="_self">PLAY MEDIA</a><br><br><br><br><br><br><br>
 <a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a>
