--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
 <title> COVID-19CHECK</title>
 
 <script>
+
 function startTime() {
-  var today = new Date();
-  var h = today.getHours();
-  var m = today.getMinutes();
-  var s = today.getSeconds();
-  m = checkTime(m);
-  s = checkTime(s);
-  document.getElementById('txt').innerHTML =
-  h + ":" + m + ":" + s;
-  var t = setTimeout(startTime, 500);
+    var today=new Date();
+    var h=today.getHours();
+    var m=today.getMinutes();
+    var s=today.getSeconds();
+    m = checkTime(m);
+    s = checkTime(s);
+    document.getElementById('txt').innerHTML = "<font color='white' size='50' ><table border='1' bgcolor='lightgreen'><tr><td>Hour</td><td>Minutes</td><td>Seconds</td></tr><tr><td>"+h+"</td><td>"+m+"</td><td>"+s+"</td></tr></table></font>";
+    var t = setTimeout(function(){startTime()},500);
 }
+
 function checkTime(i) {
-  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-  return i;
+    if (i<10) {i = "0" + i};  // add zero in front of numbers < 10
+    return i;
 }
 </script>
+</head>
+
+</body>
+</html>
 <style>
 div.container {
     width: 100%;
