--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@ onload="startTime()">
 </html>
 		<center>
 <a href="new 1.html" target="_self">FORM</a><br><br><br><br><br><br><br>
-<a href="TEST.html" style="color:white;target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
+<a href="TEST.html" style="color:white;" target"="_self">TAKE TEST</a><br><br><br><br><br><br><br>
 <a href="article.html" target="_self">SOME F.A.Q</a><br><br><br><br><br><br><br>
-<a href="media.html" target="_self">PLAY MEDIA</a><br><br><br><br><br><br><br>
+<a href="MEDIA.html" target="_self">PLAY MEDIA</a><br><br><br><br><br><br><br>
 <a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a>
 				</center>
 
