--- a/photoz.html
+++ b/photoz.html
@@ -17,7 +17,7 @@
 <figcaption>Patient receiving treatment</figcaption>
 </figure>
 <figure>
-<img onmouseover="bigImg(this)" src="recovered-patient.jpeg" alt="recovered-patient" width="500" height="420"/>
+<img onmouseover="bigImg(this)" src="assets/gallery/recovered-patient.jpeg" alt="recovered-patient" width="500" height="420"/>
 <figcaption>A recovered Patient</figcaption>
 </figure>
 
