--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <video width="100%" controls>
-        <source src="Coronavirus- What happens in an intensive care unit - BBC News.mp4" type="video/mp4">
+        <source src="assets/gallery/Coronavirus- What happens in an intensive care unit - BBC News.mp4" type="video/mp4">
     </video>
 </body>
 </html>
