--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ function startTime() {
     var s=today.getSeconds();
     m = checkTime(m);
     s = checkTime(s);
-    document.getElementById('txt').innerHTML = "<font color='white' size='50' ><table border='1' bgcolor='lightgreen'><tr><td>Hour</td><td>Minutes</td><td>Seconds</td></tr><tr><td>"+h+"</td><td>"+m+"</td><td>"+s+"</td></tr></table></font>";
+    document.getElementById('txt').innerHTML = "<font color='white' size='50' ><table cellspacing=3' cellpadding='1' width='300' border='1' bgcolor='lightgreen'><tr><td>Hour</td><td>Minutes</td><td>Seconds</td></tr><tr><td>"+h+"</td><td>"+m+"</td><td>"+s+"</td></tr></table></font>";
     var t = setTimeout(function(){startTime()},500);
 }
 
@@ -24,9 +24,10 @@ function checkTime(i) {
 }
 </script>
 </head>
-
+<body style ="background-color: rgb(255,255,220);">
 </body>
 </html>
+
 <style>
 div.container {
     width: 100%;
@@ -46,6 +47,8 @@ nav {
     max-width: 160px;
     margin: 0;
     padding: 1em;
+	
+	background-color:rgb(0,200,0);
 }
 
 nav ul {
@@ -94,9 +97,9 @@ onload="startTime()">
 </html>
 		<center>
 <a href="new 1.html" target="_self">FORM</a><br><br><br><br><br><br><br>
-<a href="TEST.html" style="color:white;" target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
+<a href="TEST.html" style="color:white;target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
 <a href="article.html" target="_self">SOME F.A.Q</a><br><br><br><br><br><br><br>
-<a href="MEDIA.html" target="_self">PLAY MEDIA</a><br><br><br><br><br><br><br>
+<a href="media.html" target="_self">PLAY MEDIA</a><br><br><br><br><br><br><br>
 <a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a>
 				</center>
 
