--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ onload="startTime()">
 </html>
 		<center>
 <a href="new 1.html" target="_self">FORM</a><br><br><br><br><br><br><br>
-<a href="TEST.html" style="color:white;target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
+<a href="TEST.html" style="color:rgb(255,255,220);target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
 <a href="article.html" target="_self">SOME F.A.Q</a><br><br><br><br><br><br><br>
 <a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a>
 				</center>
