--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function checkTime(i) {
 }
 </script>
 </head>
-<body style ="background-color: rgb(255,255,220);">
+<body style ="background-color:  );">
 </body>
 </html>
 
@@ -96,10 +96,10 @@ onload="startTime()">
 
 </html>
 		<center>
-<a href="new 1.html" target="_self">FORM</a><br><br><br><br><br><br><br>
-<a href="TEST.html" style="color:rgb(255,255,220);target="_self">TAKE TEST</a><br><br><br><br><br><br><br>
+<a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a><br><br><br><br><br><br><br>
 <a href="article.html" target="_self">SOME F.A.Q</a><br><br><br><br><br><br><br>
-<a href="http://tiny.cc/g313mz" target="_self">CHECK STATISTICS</a>
+<a href="new 1.html" target="_self">FILL FORM</a><br><br><br><br><br><br><br>
+<a href="TEST.html" style="color:white;target="_self"> TEST</a>
 				</center>
 
 <footer>NCDC 2020</footer>
