--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function checkTime(i) {
 }
 </script>
 </head>
-<body style ="background-color:  );">
+<body style ="background-color: rgb(255,255,220) ;">
 </body>
 </html>
 
@@ -84,6 +84,7 @@ onload="startTime()">
 <header>
    <h1>COVID-19-CHECKER</h1>
 </header>
+<br>
   
 <nav>
   <ul>
